# rust-sdl

./: Cargo.toml  README.md
src/sdl/: audio.rs  cd.rs  event.rs  joy.rs  mouse.rs  sdl.rs  start.rs  video.rs  wm.rs
src/sdl-demo/: main.rs
src/sdl-demo-mac/: Cargo.toml  README.md  build.rs  sdl_main.rs
src/sdl-demo-ttf/: Cargo.toml  main.rs
src/sdl_image/: Cargo.toml  lib.rs
src/sdl_mixer/: Cargo.toml  lib.rs
src/sdl_ttf/: Cargo.toml  lib.rs
