[package]
name = "sdl-demo"
version = "0.3.5"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Kang Seonghoon <public+rust@mearie.org>"
]

[[bin]]
name = "sdl-demo"
path = "main.rs"

[dependencies]
rand = "^0.8.5"
sdl = { path = "../.." }
sdl_image = { path = "../sdl_image" }
sdl_ttf = { path = "../sdl_ttf" }
